{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 137,
  "lineage": "e6a6fc9a-a45b-25e6-4e62-c90939263965",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/frontendIPConfigurations/frontend",
                "name": "frontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/publicIPAddresses/pip-lb"
              }
            ],
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web",
            "location": "centralus",
            "name": "lb-web",
            "resource_group_name": "rg-webapp-20251028103624Z",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Tier": "Web"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/backendAddressPools/backend-pool",
            "loadbalancer_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web",
            "name": "backend-pool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.web",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_outbound_rule",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocated_outbound_ports": 1024,
            "backend_address_pool_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/backendAddressPools/backend-pool",
            "enable_tcp_reset": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/frontendIPConfigurations/frontend",
                "name": "frontend"
              }
            ],
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/outboundRules/outbound-rule",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web",
            "name": "outbound-rule",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.web",
            "azurerm_lb_backend_address_pool.web",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/probes/http-probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.web",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/backendAddressPools/backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/frontendIPConfigurations/frontend",
            "frontend_ip_configuration_name": "frontend",
            "frontend_port": 80,
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/loadBalancingRules/http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web",
            "name": "http-rule",
            "probe_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/probes/http-probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.web",
            "azurerm_lb_backend_address_pool.web",
            "azurerm_lb_probe.web",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/networkInterfaces/nic-app-1",
            "internal_domain_name_suffix": "e1fpwvbdhnjubmuez2emu3q4we.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/virtualNetworks/vnet-webapp/subnets/snet-app"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "name": "nic-app-1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "rg-webapp-20251028103624Z",
            "tags": {
              "Tier": "App"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.app",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/networkInterfaces/nic-app-2",
            "internal_domain_name_suffix": "e1fpwvbdhnjubmuez2emu3q4we.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/virtualNetworks/vnet-webapp/subnets/snet-app"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "name": "nic-app-2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-webapp-20251028103624Z",
            "tags": {
              "Tier": "App"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.app",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/networkInterfaces/nic-web-1",
            "internal_domain_name_suffix": "e1fpwvbdhnjubmuez2emu3q4we.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/virtualNetworks/vnet-webapp/subnets/snet-web"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "name": "nic-web-1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-webapp-20251028103624Z",
            "tags": {
              "Tier": "Web"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.web",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/networkInterfaces/nic-web-2",
            "internal_domain_name_suffix": "e1fpwvbdhnjubmuez2emu3q4we.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/virtualNetworks/vnet-webapp/subnets/snet-web"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "name": "nic-web-2",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg-webapp-20251028103624Z",
            "tags": {
              "Tier": "Web"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.web",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/backendAddressPools/backend-pool",
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/networkInterfaces/nic-web-1/ipConfigurations/internal|/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/backendAddressPools/backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/networkInterfaces/nic-web-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.web",
            "azurerm_lb_backend_address_pool.web",
            "azurerm_network_interface.web",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main",
            "azurerm_subnet.web",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/backendAddressPools/backend-pool",
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/networkInterfaces/nic-web-2/ipConfigurations/internal|/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/loadBalancers/lb-web/backendAddressPools/backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/networkInterfaces/nic-web-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.web",
            "azurerm_lb_backend_address_pool.web",
            "azurerm_network_interface.web",
            "azurerm_public_ip.lb",
            "azurerm_resource_group.main",
            "azurerm_subnet.web",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/networkSecurityGroups/nsg-app",
            "location": "centralus",
            "name": "nsg-app",
            "resource_group_name": "rg-webapp-20251028103624Z",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "APP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Tier": "App"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/networkSecurityGroups/nsg-web",
            "location": "centralus",
            "name": "nsg-web",
            "resource_group_name": "rg-webapp-20251028103624Z",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Tier": "Web"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "lb_health_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/networkSecurityGroups/nsg-web/securityRules/AllowLBHealthProbe",
            "name": "AllowLBHealthProbe",
            "network_security_group_name": "nsg-web",
            "priority": 105,
            "protocol": "Tcp",
            "resource_group_name": "rg-webapp-20251028103624Z",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/publicIPAddresses/pip-lb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.249.243.160",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pip-lb",
            "resource_group_name": "rg-webapp-20251028103624Z",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Purpose": "LoadBalancer"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/virtualNetworks/vnet-webapp/subnets/snet-app",
            "name": "snet-app",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-webapp-20251028103624Z",
            "virtual_network_name": "vnet-webapp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/virtualNetworks/vnet-webapp/subnets/snet-web",
            "name": "snet-web",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-webapp-20251028103624Z",
            "virtual_network_name": "vnet-webapp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/virtualNetworks/vnet-webapp/subnets/snet-app",
            "network_security_group_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/networkSecurityGroups/nsg-app",
            "subnet_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/virtualNetworks/vnet-webapp/subnets/snet-app"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.app",
            "azurerm_resource_group.main",
            "azurerm_subnet.app",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/virtualNetworks/vnet-webapp/subnets/snet-web",
            "network_security_group_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/networkSecurityGroups/nsg-web",
            "subnet_id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/virtualNetworks/vnet-webapp/subnets/snet-web"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.web",
            "azurerm_resource_group.main",
            "azurerm_subnet.web",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "54fbca26-3b23-4053-b284-cf08ca761eb4",
            "id": "/subscriptions/fb0849b7-486e-4e06-933d-83f1431d6bc2/resourceGroups/rg-webapp-20251028103624Z/providers/Microsoft.Network/virtualNetworks/vnet-webapp",
            "location": "centralus",
            "name": "vnet-webapp",
            "resource_group_name": "rg-webapp-20251028103624Z",
            "tags": {
              "Environment": "Production"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}